[tool.poetry]
name = "cipher_sp3881"
version = "0.3.0"
description = "cipher"
authors = ["Baek Park"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
